--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,27 @@
 body {
-    background-color: #000022;
-    color: #dddddd;
+    /* Background pattern from Toptal Subtle Patterns */
+    background-image: url("img/gaming-pattern.png");
+    background-color: #cccccc;
+    background-repeat: repeat;
+    color: #333;
+    font-size: 20px;
 }
 
-.container {
+#container {
+    position: relative;
+    background-color: white;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    height: auto;
+    box-shadow: 15px 14px 30px 5px rgba(50,50,50,0.9);
+    -webkit-box-shadow: 15px 14px 30px 5px rgba(50,50,50,0.9);
+    -moz-box-shadow: 15px 14px 30px 5px rgba(50,50,50,0.9);
+    padding-bottom: 5rem;
 }
 
 #title {
+    padding: 20px;
     text-align: center;
 }
 
@@ -25,7 +37,9 @@ body {
 
 input[type="text"],
 input[type="number"],
-input[type="email"] {
+input[type="email"],
+#dropdown {
+    display: block;
     width: 200px;
     padding: 10px;
     background-color: #efefef;
@@ -33,6 +47,19 @@ input[type="email"] {
     border: 2px solid #ddd;
     border-radius: 5px;
     box-sizing: border-box;
+    outline: none;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+#dropdown:focus {
+    box-shadow: 0px 0px 10px 2px rgba(200,200,200,0.9);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(200,200,200,0.9);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(200,200,200,0.9);
+    border: 2px solid #a5cda5;
+    background-color: #e9f3e9;
+    color: #428c42;
 }
 
 .personalDataField {
@@ -61,4 +88,32 @@ input[type="email"] {
 
 .ownWordPreferations {
     clear:both;
+}
+
+#submit {
+    display: block;
+    width: 300px;
+    background-color: #36b03c;
+    font-size: 20px;
+    color: white;
+    padding: 15px 10px;
+    margin: 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    letter-spacing: 2px;
+    outline: none;
+    text-align: center;
+    position: absolute;
+    right: 0px;
+}
+
+#submit:focus {
+    box-shadow: 0px 0px 15px 5px rgba(200,200,200,0.9);
+    -webkit-box-shadow: 0px 0px 15px 5px rgba(200,200,200,0.9);
+    -moz-box-shadow: 0px 0px 15px 5px rgba(200,200,200,0.9);
+}
+
+#submit:hover {
+    background-color: #37b93d;
 }
